Add padding between main menu buttons.

--- a/modular-app/src/main/resources/pl/vgtworld/javafx/fxml/modularapp/main-window.fxml
+++ b/modular-app/src/main/resources/pl/vgtworld/javafx/fxml/modularapp/main-window.fxml
@@ -3,9 +3,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.geometry.Insets?>
 <BorderPane styleClass="main-window" fx:id="root" xmlns:fx="http://javafx.com/fxml" fx:controller="pl.vgtworld.javafx.fxml.modularapp.MainController">
     <top>
-        <HBox>
+        <HBox spacing="5">
+            <padding><Insets top="5" left="5" right="5" bottom="5"/></padding>
             <Button text="first" onAction="#firstPressed"/>
             <Button text="second" onAction="#secondPressed"/>
         </HBox>
