Minor code fixes.

--- a/modular-app/src/main/resources/pl/vgtworld/javafx/fxml/modularapp/first/first.fxml
+++ b/modular-app/src/main/resources/pl/vgtworld/javafx/fxml/modularapp/first/first.fxml
@@ -7,6 +7,6 @@
         <URL value="@style.css"/>
     </stylesheets>
     <center>
-        <Label text="First pane"></Label>
+        <Label text="First pane"/>
     </center>
 </BorderPane>
