--- a/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
+++ b/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
@@ -2,17 +2,17 @@
 
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Text?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <VBox xmlns:fx="http://javafx.com/fxml" fx:controller="pl.vgtworld.javafx.fxml.contactsbook.gui.contactform.ContactformPresenter">
     <Label text="First name:"/>
-    <Text fx:id="firstName"/>
+    <TextField fx:id="firstName"/>
     <Label text="Last name:"/>
-    <Text fx:id="lastName"/>
+    <TextField fx:id="lastName"/>
     <Label text="E-Mail:"/>
-    <Text fx:id="emailAddress"/>
+    <TextField fx:id="emailAddress"/>
     <Label text="Notes:"/>
     <TextArea fx:id="notes"/>
     <HBox>
