Handle cancel action on new contact form.

--- a/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
+++ b/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
@@ -17,6 +17,6 @@
     <TextArea fx:id="notes"/>
     <HBox>
         <Button text="Save"/>
-        <Button text="Cancel"/>
+        <Button text="Cancel" onAction="#cancelContactCreation"/>
     </HBox>
 </VBox>
