--- a/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
+++ b/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="pl.vgtworld.javafx.fxml.contactsbook.gui.contactform.ContactformPresenter">
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="pl.vgtworld.javafx.fxml.contactsbook.gui.contactform.ContactFormController">
     <Label text="First name:"/>
     <TextField fx:id="firstName"/>
     <Label text="Last name:"/>
