Handle contact creation action.

--- a/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
+++ b/contacts-book/src/main/java/pl/vgtworld/javafx/fxml/contactsbook/gui/contactform/contactform.fxml
@@ -16,7 +16,7 @@
     <Label text="Notes:"/>
     <TextArea fx:id="notes"/>
     <HBox>
-        <Button text="Save"/>
+        <Button text="Save" onAction="#saveContact"/>
         <Button text="Cancel" onAction="#cancelContactCreation"/>
     </HBox>
 </VBox>
